--- a/Html.html
+++ b/Html.html
@@ -19,11 +19,11 @@
         .container {
             display: table;
             border-collapse: collapse;
-            width: 50%; /* Set width to 50% of the screen */
+            width: 50%;
             position: absolute;
             top: 0;
             left: 0;
-            margin: 10px; /* Adds a little space from the edge */
+            margin: 10px;
         }
 
         .box {
